--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "typeorm:cli": "ts-node ./node_modules/typeorm/cli -f  -d ./src/libs/db/typeOrm.config.ts",
+    "typeorm": "ts-node ./node_modules/typeorm/cli",
+    "run:migrations": "npm run typeorm migration:run -- -d ./src/libs/db/typeOrm.config.ts",
+    "generate:migration": "npm run typeorm -- -d ./src/libs/db/typeOrm.config.ts migration:generate ./src/libs/db/migrations/$npm_config_name",
+    "typeorm:create-migration": "npm run typeorm -- migration:create ./src/libs/db/migrations/$npm_config_name",
+    "typeorm:revert-migration": "npm run typeorm -- -d ./src/libs/db/typeOrm.config.ts migration:revert",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -20,19 +26,71 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/ioredis": "^2.0.2",
+    "@nestjs/bull": "^10.1.1",
+    "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/cqrs": "^10.2.7",
+    "@nestjs/event-emitter": "^2.0.4",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^10.3.9",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.9",
+    "@nestjs/schedule": "^4.0.2",
+    "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/websockets": "^10.3.9",
+    "aws-sdk": "^2.1637.0",
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "bull": "^4.12.9",
+    "cache-manager": "^5.6.1",
+    "cache-manager-redis-store": "^3.0.1",
+    "cache-manager-redis-yet": "^5.1.1",
+    "chai": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "firebase-admin": "^12.1.1",
+    "helmet": "^7.1.0",
+    "ioredis": "^5.4.1",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
+    "nanoid": "^5.0.7",
+    "nodejs-snowflake": "^2.0.1",
+    "nodemailer": "^6.9.13",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "pg": "^8.12.0",
+    "redis": "^4.6.14",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.24.7",
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cache-manager-redis-store": "^2.0.4",
     "@types/express": "^4.17.17",
+    "@types/got": "^9.6.12",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/pg": "^8.11.6",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
